<resources>
    <string name="app_name">QuizApp</string>
    <string name="main_text_1">Quiz App</string>
    <string name="main_button_1">Start</string>
    <string name="main_toast">Here\'s a toast for ya!</string>
    <string name="question1">Who\'s my AppDev mentor?</string>
    <string name="q1_op1">Saptarshi Roy Choudhuri</string>
    <string name="q1_op2">Shivaji Reddy</string>
    <string name="q1_op3">Aditya Bharadwaj</string>
    <string name="q1_op4">Mahima Borah</string>
    <string name="question2">In which state is Manipal located?</string>
    <string name="q2_op1">Solid</string>
    <string name="q2_op2">Kerala</string>
    <string name="q2_op3">Karnataka</string>
    <string name="q2_op4">Maharashtra</string>
    <string name="question3">Which of the following is not an algorithm?</string>
    <string name="q3_op1">Game Theory</string>
    <string name="q3_op2">DFS</string>
    <string name="q3_op3">BFS</string>
    <string name="q3_op4">Sieve Of Eratosthenes</string>
    <string name="finish">Finish</string>
    <string name="final_page">Your Score -</string>
    <string name="goodbye_msg">Thanks For Playing!</string>
</resources>
